# HCB_STUDIO

./: .gitignore
00_Core/config/: ai_engine.json
00_Core/contracts/: block_organizer_project.schema.json  capsule.schema.json  checkpoint.schema.json  command.schema.json  concept_registry.json  hcb_state.schema.json  prompt_block.schema.json  result.schema.json  sci_user_profile.schema.json  timeline.schema.json
00_Core/docs/: CADERNO_ARMS_09_E_10.md  CADERNO_ARM_10_BLOCK_ORGANIZER.md  CADERNO_GUIA_HCB_STUDIO.md  CADERNO_TECNICO_ACOPLAMENTO_ARM_09_10_V2.md  HCB_EXE_SCI_ONBOARDING.md  HCB_EXE_STATE_ONBOARDING.md  HCB_STUDIO_NERVOUS_SYSTEM_3DAY_PLAN.md
00_Core/engines/: CMakeLists.txt  archie_core.py  archie_monitor.py  brain_v1.pkl  hcb_input.py  vectorizer_v1.pkl
00_Core/engines/cpp_extreme/: CMakeLists.txt
00_Core/logs/: hcb_evolve_report_20260301_192001.json
00_Core/runtime/hcb_studio_host/: Cargo.toml  README.md  build_release.bat
00_Core/runtime/rust_coordinator/: Cargo.toml
00_Core/runtime/rust_coordinator/src/: main.rs
00_Core/scripts/: hcb_control.py
00_Core/scripts/arms/: __init__.py  ai_engine.py  arm_09_prompt_writer.py  arm_10_block_organizer.py  arm_memory_fabric.py  arm_tool_runner.py  concept_registry.py  (+3 more)
01_Archivus/personas/: ALMA_MASTER.json
02_STORAGE/AI_Classified_FINANCEIRO/: archie_response.hcb_vault
02_STORAGE/Contexto_FINANCEIRO/: Segredo Financeiro.hcb_vault  fatura teste, legal.txt  fatura_7856.txt  nota_mental.txt
02_STORAGE/Triagem_Geral/: segredo_financeiro.txt.txt
03_TRAINING/PRJ_02_SENTINEL/: BRIEFING.md
(+20 files in other folders)
