[package]
name = "rust_coordinator"
version = "0.1.0"
edition = "2021"
description = "HCB Studio Nervous System - Core Orchestrator"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
